# Derks_BASIC

./: .clangd  .gitignore  CMakeLists.txt  Config.mk  Makefile  README.md  utility.sh
includes/frontend/: lexer.h  token.h
includes/utils/: cstrview.h  dict.h  files.h  safestr.h
src/: CMakeLists.txt  cstrview.c  dict.c  files.c  lexer.c  main.c  safestr.c  token.c
test_code/: hello.dbasic  math.dbasic
tests/: CMakeLists.txt  dbasic_test_dud.c  dbasic_test_lexer.c
